--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,29 +1,29 @@
 <header class="intro">
   <h2>Spine</h2>
-  <h3>Для создания на JavaScript<br /> замечательных MVC приложений</h3>
+  <h3>Библиотека для современных<br /> веб приложений</h3>
 </header>
 
 <article>
   <footer>
     <div class="bcta">
-      <%= link_to "Скачать (версия #{version})", pages_path("download"), :class => "cta" %>
+      <%= link_to "Скачать (версию #{version})", pages_path("download"), :class => "cta" %>
     </div>
   </footer>
   
   <aside>
     <section>
       <header>MVC</header>
-      <p>Паттерн Model View Controller это основа Spine, и совершенная необходимость для современных веб приложений.</p>
+      <p>Подход Model View Controller это основа Spine и необходимость для современных веб приложений.</p>
     </section>
     
     <section>
       <header>Простота</header>
-      <p>Spine это простая и легковесная библиотека. Не состоит из множества компонентов которые требуют сложной настройки.</p>
+      <p>Spine это простая и легковесная библиотека. Не требуeт сложной настройки.</p>
     </section>
     
     <section>
       <header>Документация</header>
-      <p>Мы стараемся сделать самую удобную документацию среди JavaScript библиотек.</p>
+      <p>Мы стараемся поддерживать удобную документацию.</p>
     </section>
     
     <%= link_to "Далее...", docs_url("introduction"), :class => "more" %>
