--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,19 +1,19 @@
 <header class="intro">
   <h2>Spine</h2>
-  <h3>Библиотека для современных<br /> веб приложений</h3>
+  <h3>Библиотека для современных MVC<br /> веб приложений на Javascript</h3>
 </header>
 
 <article>
   <footer>
     <div class="bcta">
-      <%= link_to "Скачать (версию #{version})", pages_path("download"), :class => "cta" %>
+      <%= link_to "Скачать версию #{version}", pages_path("download"), :class => "cta" %>
     </div>
   </footer>
   
   <aside>
     <section>
       <header>MVC</header>
-      <p>Подход Model View Controller это основа Spine и необходимость для современных веб приложений.</p>
+      <p>Model View Controller это основа Spine.</p>
     </section>
     
     <section>
