--- a/app/views/layouts/api.html.erb
+++ b/app/views/layouts/api.html.erb
@@ -19,22 +19,22 @@
     <nav id="nav">
       <h2><%= link_to "API", api_path %></h2>
       <ul>
-        <li><%= link_to "Classes", api_path("classes") %></li>
-        <li><%= link_to "Models", api_path("models") %></li>
-        <li><%= link_to "Controllers", api_path("controllers") %></li>
-        <li><%= link_to "Events", api_path("events") %></li>
-        <li><%= link_to "Routing", api_path("routing") %></li>
+        <li><%= link_to "Классы", api_path("classes") %></li>
+        <li><%= link_to "Модели", api_path("models") %></li>
+        <li><%= link_to "Контроллеры", api_path("controllers") %></li>
+        <li><%= link_to "События", api_path("events") %></li>
+        <li><%= link_to "Роутинг", api_path("routing") %></li>
       </ul>
       
-      <h2>More</h2>
+      <h2>Дополнительно</h2>
       
       <ul>
-        <li><%= link_to "Guides", docs_path %></li>
+        <li><%= link_to "Руководства", docs_path %></li>
       </ul>
       
       <div id="search">
         <%= form_tag api_path(:search), :method => :get do %>
-          <input type="search" name="query" value="" placeholder="Search..." results="0">
+          <input type="search" name="query" value="" placeholder="Поиск..." results="0">
         <%- end %>
       </div>
     </nav>
