--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <li><%= link_to "Главная", "/" %></li>
       <li><%= link_to "Документация", docs_path %></li>
       <li><%= link_to "Spine Mobile", mobile_pages_path %></li>
-      <li><%= link_to "О сайте", pages_path("about") %></li>
+      <li><%= link_to "О проекте", pages_path("about") %></li>
     </ul>
   </footer>
 </body>
