--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,15 @@
 <header class="heading">
-  <h2>About</h2>  
+  <h2>О проекте</h2>  
 </header>
 
 <article>
-  <p>Spine was written by <%= link_to "Alex MacCaw", "http://alexmaccaw.co.uk" %>, alongside O'Reilly's <%= link_to "JavaScript Web Applications", "http://shop.oreilly.com/product/0636920018421.do" %>. The framework was heavily inspired by <%= link_to "Backbone", "http://documentcloud.github.com/backbone/" %>, an excellent alternative.</p>
-  <p>Follow the author on <%= link_to "Twitter", "http://twitter.com/maccman" %>.</p>
-  <p>Contact the author at <%= mail_to "info@eribium.org" %>.</p>
+  <p>Spine написал <%= link_to "Alex MacCaw", "http://alexmaccaw.co.uk" %>, alongside O'Reilly's <%= link_to "JavaScript Web Applications", "http://shop.oreilly.com/product/0636920018421.do" %>. 
+    Эта библиотека многое подчерпнула из прекрасной альтернативы <%= link_to "Backbone", "http://documentcloud.github.com/backbone/" %>.</p>
+  <p>Твиттер автора <%= link_to "@maccman", "http://twitter.com/maccman" %>.</p>
+  <p>Написать письмо автору можно по адресу <%= mail_to "info@eribium.org" %>.</p>
+
+  <p>Оригинальная версия сайта находится по адресу <%= link_to "spinejs.com", "http://spinejs.com" %>. 
+    Перевод сайта и документации на русский сделан <%= link_to "@antonkopylov", "http://twitter.com/antonkopylov" %>. 
+    Если вы обнаружили ошибку или неточность присылайте исправления. 
+    Исходный <%= link_to "код сайта", "https://github.com/tonic20/spine.site" %> на гитхабе.</p> 
 </article>
