--- a/app/views/pages/community.html.erb
+++ b/app/views/pages/community.html.erb
@@ -1,11 +1,13 @@
 <header class="heading">
-  <h2>Community</h2>  
+  <h2>Сообщество</h2>  
 </header>
 
 <article>
-  <p>Post a message on the <%= link_to "Google Group", "https://groups.google.com/forum/#!forum/spinejs" %>.</p>
-  <p>Join the <a href="irc://irc.freenode.net/#spine">#spine</a> group on irc.freenode.net.</p>
-  <p>Add a ticket to the <%= link_to "GitHub repo", "https://github.com/maccman/spine" %>.</p>
-  <p>Follow the framework's author, <%= link_to "Alex MacCaw", "http://alexmaccaw.co.uk" %>, on <%= link_to "Twitter", "http://twitter.com/maccman" %>.</p>
-  <p>Or send me an email: <%= mail_to "info@eribium.org" %>.</p>
+  <p>Пишите в <%= link_to "гугло группе", "https://groups.google.com/forum/#!forum/spinejs" %>.</p>
+  <p>Присоединяйтесь к <a href="irc://irc.freenode.net/#spine">#spine</a> группе на irc.freenode.net.</p>
+  <p>Добавляйте тикеты в <%= link_to "гитхабе", "https://github.com/maccman/spine" %>.</p>
+  <p>Фоловьте автора, <%= link_to "Alex MacCaw", "http://alexmaccaw.co.uk" %>, в <%= link_to "твиттере", "http://twitter.com/maccman" %>.</p>
+  <p>Используйте адрес для писем: <%= mail_to "info@eribium.org" %>.</p>
+
+  <p>Фоловьте переводчика <%= link_to "@antonkopylov", "http://twitter.com/antonkopylov" %> :)</p>
 </article>
