Translate examples pages.

--- a/app/views/pages/examples.html.erb
+++ b/app/views/pages/examples.html.erb
@@ -3,32 +3,33 @@
 </header>
 
 <article>
-  <p>Todos is a very simple to-do application. Users can CRUD tasks, and mark them as complete.
-  The source is <a href="http://github.com/maccman/spine.todos">available on GitHub</a>. <a href="http://maccman.github.com/spine.todos">[Demo]</a></p>
+  <p>Todos это простое приложение для хранения списка задач. Пользователи могут редактировать задачи и помечать их как выполненные.
+  Исчодный код на <a href="http://github.com/maccman/spine.todos">гитхабе</a>. <a href="http://maccman.github.com/spine.todos">[Демо]</a></p>
   
   <img src="https://lh4.googleusercontent.com/_IH1OempnqUc/TZF16JZSTlI/AAAAAAAABKM/ojAu7OBqXp8/s500/Screen%20shot%202011-03-29%20at%2019.01.44.png"/>
   
   <hr />
 
-  <p>Spine contacts is a simple address book, allowing users to CRUD contacts. The full source is <a href="http://github.com/maccman/spine.contacts">available on GitHub</a>. <a href="http://spine-contacts.herokuapp.com">[Demo]</a></p>
+  <p>Spine contacts это простая адресная книга. Исходные коды на <a href="http://github.com/maccman/spine.contacts">гитхабе</a>. <a href="http://spine-contacts.herokuapp.com">[Демо]</a></p>
 
   <img src="https://lh5.googleusercontent.com/_IH1OempnqUc/TZpgYfnlUBI/AAAAAAAABKg/UYLhdmoc15o/s500/contacts.png" />
 
   <hr />
 
-  <p>Holla is the most advanced example, and <a href="http://github.com/maccman/holla">can be found on GitHub</a>. Holla is a group chat application, and uses a combination of <a href="http://rubyonrails.org">Rails</a>, <a href="http://github.com/maccman/juggernaut">Juggernaut</a> and Spine to let users chat in realtime. *WebKit only*. <a href="http://maccman-holla.heroku.com">[Demo]</a></p>
+  <p>Holla это самый сложный пример. Исходники на <a href="http://github.com/maccman/holla">гитхабе</a>. 
+    Holla это групповой чат. Используется сочетание <a href="http://rubyonrails.org">Rails</a>, <a href="http://github.com/maccman/juggernaut">Juggernaut</a> и Spine для работы приложения в реальном времени. Только для браузеров на *WebKit*. <a href="http://maccman-holla.heroku.com">[Демо]</a></p>
   
   <img src="https://lh4.googleusercontent.com/_IH1OempnqUc/TZF1gMnidmI/AAAAAAAABKE/b9rp9RdtA3o/s500/Screen%20shot%202011-03-29%20at%2018.58.12.png" />
   
   <hr />
   
-  <p>The next example shows how to easily implement infinite scrolling using Spine &amp; Rails. The source code can be found <a href="http://github.com/maccman/spine.infinite">on GitHub</a>, and there's also a <a href="http://spine-infinite.herokuapp.com/">live demo</a>.</p>
+  <p>Следущий пример показывает как легко реализовать бесконечную прокрутку используя Spine &amp; Rails. Исходники на <a href="http://github.com/maccman/spine.infinite">гитхабе</a>, а также <a href="http://spine-infinite.herokuapp.com/">живая демонстрация</a>.</p>
     
   <img src="https://lh6.googleusercontent.com/-XoGlAJopIWY/Tp2jqNAIH_I/AAAAAAAABbU/MG7v_OtmZ4k/s500/Screen%252520Shot%2525202011-10-18%252520at%25252017.04.27.png">
   
   <hr />
   
-  <p>The <a href="https://github.com/maccman/spine.rails3">last example</a> is a demonstration of integrating Spine &amp; Rails 3. There's also an example of realtime sync in the <a href="https://github.com/maccman/spine.rails3/tree/fowa">fowa</a> branch. <a href="http://spine-fowa.herokuapp.com/">[Demo]</a></p>
+  <p>Последний <a href="https://github.com/maccman/spine.rails3">пример</a> это демонстрация интеграции Spine &amp; Rails 3. Также пример ицпользования обновлений в реальном времени в <a href="https://github.com/maccman/spine.rails3/tree/fowa">ветке fowa</a>. <a href="http://spine-fowa.herokuapp.com/">[Демо]</a></p>
     
   <img src="https://lh4.googleusercontent.com/-vxBcOT0TIpM/ToNWaL-o83I/AAAAAAAABao/ObsGjxoX5oQ/s500/Screen%252520Shot%2525202011-09-27%252520at%25252022.16.41.png">
 </article>
