--- a/app/views/pages/examples.html.erb
+++ b/app/views/pages/examples.html.erb
@@ -4,7 +4,7 @@
 
 <article>
   <p>Todos это простое приложение для хранения списка задач. Пользователи могут редактировать задачи и помечать их как выполненные.
-  Исчодный код на <a href="http://github.com/maccman/spine.todos">гитхабе</a>. <a href="http://maccman.github.com/spine.todos">[Демо]</a></p>
+  Исxодный код на <a href="http://github.com/maccman/spine.todos">гитхабе</a>. <a href="http://maccman.github.com/spine.todos">[Демо]</a></p>
   
   <img src="https://lh4.googleusercontent.com/_IH1OempnqUc/TZF16JZSTlI/AAAAAAAABKM/ojAu7OBqXp8/s500/Screen%20shot%202011-03-29%20at%2019.01.44.png"/>
   
@@ -29,7 +29,7 @@
   
   <hr />
   
-  <p>Последний <a href="https://github.com/maccman/spine.rails3">пример</a> это демонстрация интеграции Spine &amp; Rails 3. Также пример ицпользования обновлений в реальном времени в <a href="https://github.com/maccman/spine.rails3/tree/fowa">ветке fowa</a>. <a href="http://spine-fowa.herokuapp.com/">[Демо]</a></p>
+  <p>Последний <a href="https://github.com/maccman/spine.rails3">пример</a> это демонстрация интеграции Spine &amp; Rails 3. Смотрите также пример использования обновлений в реальном времени в <a href="https://github.com/maccman/spine.rails3/tree/fowa">ветке fowa</a>. <a href="http://spine-fowa.herokuapp.com/">[Демо]</a></p>
     
   <img src="https://lh4.googleusercontent.com/-vxBcOT0TIpM/ToNWaL-o83I/AAAAAAAABao/ObsGjxoX5oQ/s500/Screen%252520Shot%2525202011-09-27%252520at%25252022.16.41.png">
 </article>
