--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,10 @@
       <li><%= link_to "Spine Mobile", mobile_pages_path %></li>
       <li><%= link_to "О проекте", pages_path("about") %></li>
     </ul>
+
+    <div class="orphus">
+      <%= orphus_tag %>
+    </div>
   </footer>
 </body>
 </html>
