Add link to second translater.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,7 +11,7 @@
   <p>Написать письмо автору можно по адресу <%= mail_to "info@eribium.org" %>.</p>
 
   <p>Оригинальная версия сайта находится по адресу <%= link_to "spinejs.com", "http://spinejs.com" %>. 
-    Перевод сайта и документации на русский сделан <%= link_to "@antonkopylov", "http://twitter.com/antonkopylov" %>. 
+    Перевод сайта и документации на русский сделал <%= link_to "@antonkopylov", "http://twitter.com/antonkopylov" %> и <a href="http://rubydev.ru/">rubydev</a>.
     Если вы обнаружили ошибку или неточность присылайте исправления пул реквестами. 
     Исходный <%= link_to "код сайта", "https://github.com/tonic20/spine.site" %> на гитхабе.</p> 
 </article>
